kubernetes/kubernetes/main/apps/self-hosted/kanboard/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard-ingress
  annotations:
    gethomepage.dev/description: Kanban board for all projects
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Projects
    gethomepage.dev/icon: sh-kanboard
    gethomepage.dev/name: Kanboard
    gethomepage.dev/pod-selector: "app=kanboard"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: kanboard.internal
spec:
  tls:
    - hosts:
      - kanboard.internal
      secretName: kanboard-ing-cert
  ingressClassName: nginx
  rules:
  - host: kanboard.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard
            port:
              number: 80
